# My-Application

./: .gitignore  gradle.properties
app/: build.gradle.kts
app/kotlin/: new.properties
app/src/androidTest/java/com/nicolas/llm/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/nicolas/llm/: ChatAdapter.kt  ChatModels.kt  MainActivity.kt
app/src/main/java/com/nicolas/llm/api/: ClaudeApiClient.kt  GeminiApiClient.kt  GroqApiClient.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  item_chat_ai.xml  item_chat_user.xml  spinner_dropdown_item.xml  spinner_item.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/nicolas/llm/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
